	+ Added email retrieval for external accounts
	+ Added more connections check to avoid spammers
	+ Add DefaultUser model to be used in users and groups default user
	  template. Admins can select if they wish to create an email account  automatically
	  by default when creating new users.
	+ Enable mail services by default
	+ Fix ids and checkRowExist in ExternalAccount.pm
	+ Reverted UI component name to be compatible with previous versions
1.3.13
	+ Fixed bug in UI: now we can set properly the maximum message size
1.3.12
	+ Add migration to rename mail table to mail_message
	+ Add breadcrumbs
1.3.11
	+ Fixed bug when retrieving LDAP instance in master/slave architecture
	+ Added log consolidation and report
1.3.10
	+ ESMTP service in port 465 fixed
	+ Deliver to local user fixed
	+ Using LDA protocol and LDAP for dovecot's userdb
	+ Added user mailbox quota
	+ Added autocreation of trash and spam folders
	+ Added flush of spam and trash folders
	+ Added sieve and managesieve support
1.3.7
	+ more resilent EBox::MailVdomain::setUserAccount, now we don't
	abort if it exists already a user maildir, instead we move it to a
	backup directory
1.3.6
	+ now you can specify a port for the smarthost (if not specified
	the default port continues to be 25)
	+ bugfix: fixed regresion in logs and added greylist event for
	connections to remote SMTPs
	+ bugfix: SMTPS port 465 now works properly
	+ added quota support
	+ added autocreation of trash and spam folders
	+ added flush of spam and trash folders
	+ add sieve and manage sieve support
	+ added retrieval of emails from external accounts
	+ added catch-all account per domain
	+ added external mail accounts aliases
	+ added 'remove all' and 'flush all' options to mail queue
	management 
	+ bugfix, in mail queue management now the mail recipients and th
	messages being delivered appears correctly
	+ added multiples alias for groups
	+ added more SMTP checks for new mail for avoidin spam