@@ -18,6 +18,7 @@ HEAD
 	  by default when creating new users.
 	+ Enable mail services by default
 	+ Fix ids and checkRowExist in ExternalAccount.pm
+	+ Fix method for modification of external accounts
 	+ Reverted UI component name to be compatible with previous versions
 1.3.13
 	+ Fixed bug in UI: now we can set properly the maximum message size
